Issue #13848: open() and the FileIO constructor now check for NUL characters in the file name. Patch by Hynek Schlawack.